// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`distributeCards distributeCards 1`] = `
Array [
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Revitalize",
    "set": "KHM",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Pillardrop Rescuer",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 126,
    "mtgoID": undefined,
    "name": "Devouring Tendrils",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 132,
    "mtgoID": undefined,
    "name": "Fortifying Draught",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 249,
    "mtgoID": undefined,
    "name": "Arctic Treeline",
    "set": "KHM",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 215,
    "mtgoID": undefined,
    "name": "You Meet in a Tavern",
    "set": "AFR",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 20,
    "mtgoID": undefined,
    "name": "Icingdeath, Frost Tyrant",
    "set": "AFR",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 22,
    "mtgoID": undefined,
    "name": "Kor Celebrant",
    "set": "ZNR",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 5,
    "mtgoID": undefined,
    "name": "Celestial Unicorn",
    "set": "AFR",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 200,
    "mtgoID": undefined,
    "name": "Prosperous Innkeeper",
    "set": "AFR",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 236,
    "mtgoID": undefined,
    "name": "Trelasarra, Moon Dancer",
    "set": "AFR",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Revitalize",
    "set": "KHM",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Pillardrop Rescuer",
    "set": "STX",
  },
  Object {
    "collectors": 24,
    "mtgoID": undefined,
    "name": "Minimus Containment",
    "set": "AFR",
  },
  Object {
    "collectors": 249,
    "mtgoID": undefined,
    "name": "Arctic Treeline",
    "set": "KHM",
  },
  Object {
    "collectors": 258,
    "mtgoID": undefined,
    "name": "Branchloft Pathway",
    "set": "ZNR",
  },
  Object {
    "collectors": 215,
    "mtgoID": undefined,
    "name": "You Meet in a Tavern",
    "set": "AFR",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Valkyrie Harbinger",
    "set": "KHM",
  },
  Object {
    "collectors": 22,
    "mtgoID": undefined,
    "name": "Kor Celebrant",
    "set": "ZNR",
  },
  Object {
    "collectors": 5,
    "mtgoID": undefined,
    "name": "Celestial Unicorn",
    "set": "AFR",
  },
  Object {
    "collectors": 200,
    "mtgoID": undefined,
    "name": "Prosperous Innkeeper",
    "set": "AFR",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Revitalize",
    "set": "KHM",
  },
  Object {
    "collectors": 126,
    "mtgoID": undefined,
    "name": "Devouring Tendrils",
    "set": "STX",
  },
  Object {
    "collectors": 24,
    "mtgoID": undefined,
    "name": "Minimus Containment",
    "set": "AFR",
  },
  Object {
    "collectors": 249,
    "mtgoID": undefined,
    "name": "Arctic Treeline",
    "set": "KHM",
  },
  Object {
    "collectors": 220,
    "mtgoID": undefined,
    "name": "Drizzt Do'Urden",
    "set": "AFR",
  },
  Object {
    "collectors": 194,
    "mtgoID": undefined,
    "name": "Lurking Roper",
    "set": "AFR",
  },
  Object {
    "collectors": 6,
    "mtgoID": undefined,
    "name": "Cleric Class",
    "set": "AFR",
  },
  Object {
    "collectors": 22,
    "mtgoID": undefined,
    "name": "Kor Celebrant",
    "set": "ZNR",
  },
  Object {
    "collectors": 34,
    "mtgoID": undefined,
    "name": "Story Seeker",
    "set": "KHM",
  },
  Object {
    "collectors": 24,
    "mtgoID": undefined,
    "name": "Righteous Valkyrie",
    "set": "KHM",
  },
  Object {
    "collectors": 119,
    "mtgoID": undefined,
    "name": "Accomplished Alchemist",
    "set": "STX",
  },
  Object {
    "collectors": 126,
    "mtgoID": undefined,
    "name": "Devouring Tendrils",
    "set": "STX",
  },
  Object {
    "collectors": 132,
    "mtgoID": undefined,
    "name": "Fortifying Draught",
    "set": "STX",
  },
  Object {
    "collectors": 249,
    "mtgoID": undefined,
    "name": "Arctic Treeline",
    "set": "KHM",
  },
  Object {
    "collectors": 186,
    "mtgoID": undefined,
    "name": "Inscription of Abundance",
    "set": "ZNR",
  },
  Object {
    "collectors": 194,
    "mtgoID": undefined,
    "name": "Lurking Roper",
    "set": "AFR",
  },
  Object {
    "collectors": 6,
    "mtgoID": undefined,
    "name": "Cleric Class",
    "set": "AFR",
  },
  Object {
    "collectors": 5,
    "mtgoID": undefined,
    "name": "Celestial Unicorn",
    "set": "AFR",
  },
  Object {
    "collectors": 34,
    "mtgoID": undefined,
    "name": "Story Seeker",
    "set": "KHM",
  },
  Object {
    "collectors": 236,
    "mtgoID": undefined,
    "name": "Trelasarra, Moon Dancer",
    "set": "AFR",
  },
]
`;

exports[`distributeCards groupByName 1`] = `
Object {
  "Accomplished Alchemist": Array [
    Object {
      "collectors": 119,
      "mtgoID": undefined,
      "name": "Accomplished Alchemist",
      "set": "STX",
    },
  ],
  "Arctic Treeline": Array [
    Object {
      "collectors": 249,
      "mtgoID": undefined,
      "name": "Arctic Treeline",
      "set": "KHM",
    },
    Object {
      "collectors": 249,
      "mtgoID": undefined,
      "name": "Arctic Treeline",
      "set": "KHM",
    },
    Object {
      "collectors": 249,
      "mtgoID": undefined,
      "name": "Arctic Treeline",
      "set": "KHM",
    },
    Object {
      "collectors": 249,
      "mtgoID": undefined,
      "name": "Arctic Treeline",
      "set": "KHM",
    },
  ],
  "Branchloft Pathway": Array [
    Object {
      "collectors": 258,
      "mtgoID": undefined,
      "name": "Branchloft Pathway",
      "set": "ZNR",
    },
  ],
  "Celestial Unicorn": Array [
    Object {
      "collectors": 5,
      "mtgoID": undefined,
      "name": "Celestial Unicorn",
      "set": "AFR",
    },
    Object {
      "collectors": 5,
      "mtgoID": undefined,
      "name": "Celestial Unicorn",
      "set": "AFR",
    },
    Object {
      "collectors": 5,
      "mtgoID": undefined,
      "name": "Celestial Unicorn",
      "set": "AFR",
    },
  ],
  "Cleric Class": Array [
    Object {
      "collectors": 6,
      "mtgoID": undefined,
      "name": "Cleric Class",
      "set": "AFR",
    },
    Object {
      "collectors": 6,
      "mtgoID": undefined,
      "name": "Cleric Class",
      "set": "AFR",
    },
  ],
  "Devouring Tendrils": Array [
    Object {
      "collectors": 126,
      "mtgoID": undefined,
      "name": "Devouring Tendrils",
      "set": "STX",
    },
    Object {
      "collectors": 126,
      "mtgoID": undefined,
      "name": "Devouring Tendrils",
      "set": "STX",
    },
    Object {
      "collectors": 126,
      "mtgoID": undefined,
      "name": "Devouring Tendrils",
      "set": "STX",
    },
  ],
  "Drizzt Do'Urden": Array [
    Object {
      "collectors": 220,
      "mtgoID": undefined,
      "name": "Drizzt Do'Urden",
      "set": "AFR",
    },
  ],
  "Forest": Array [
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Forest",
      "set": "STX",
    },
  ],
  "Fortifying Draught": Array [
    Object {
      "collectors": 132,
      "mtgoID": undefined,
      "name": "Fortifying Draught",
      "set": "STX",
    },
    Object {
      "collectors": 132,
      "mtgoID": undefined,
      "name": "Fortifying Draught",
      "set": "STX",
    },
  ],
  "Icingdeath, Frost Tyrant": Array [
    Object {
      "collectors": 20,
      "mtgoID": undefined,
      "name": "Icingdeath, Frost Tyrant",
      "set": "AFR",
    },
  ],
  "Inscription of Abundance": Array [
    Object {
      "collectors": 186,
      "mtgoID": undefined,
      "name": "Inscription of Abundance",
      "set": "ZNR",
    },
  ],
  "Kor Celebrant": Array [
    Object {
      "collectors": 22,
      "mtgoID": undefined,
      "name": "Kor Celebrant",
      "set": "ZNR",
    },
    Object {
      "collectors": 22,
      "mtgoID": undefined,
      "name": "Kor Celebrant",
      "set": "ZNR",
    },
    Object {
      "collectors": 22,
      "mtgoID": undefined,
      "name": "Kor Celebrant",
      "set": "ZNR",
    },
  ],
  "Lurking Roper": Array [
    Object {
      "collectors": 194,
      "mtgoID": undefined,
      "name": "Lurking Roper",
      "set": "AFR",
    },
    Object {
      "collectors": 194,
      "mtgoID": undefined,
      "name": "Lurking Roper",
      "set": "AFR",
    },
  ],
  "Minimus Containment": Array [
    Object {
      "collectors": 24,
      "mtgoID": undefined,
      "name": "Minimus Containment",
      "set": "AFR",
    },
    Object {
      "collectors": 24,
      "mtgoID": undefined,
      "name": "Minimus Containment",
      "set": "AFR",
    },
  ],
  "Pillardrop Rescuer": Array [
    Object {
      "collectors": 23,
      "mtgoID": undefined,
      "name": "Pillardrop Rescuer",
      "set": "STX",
    },
    Object {
      "collectors": 23,
      "mtgoID": undefined,
      "name": "Pillardrop Rescuer",
      "set": "STX",
    },
  ],
  "Plains": Array [
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
    Object {
      "collectors": 367,
      "mtgoID": undefined,
      "name": "Plains",
      "set": "STX",
    },
  ],
  "Prosperous Innkeeper": Array [
    Object {
      "collectors": 200,
      "mtgoID": undefined,
      "name": "Prosperous Innkeeper",
      "set": "AFR",
    },
    Object {
      "collectors": 200,
      "mtgoID": undefined,
      "name": "Prosperous Innkeeper",
      "set": "AFR",
    },
  ],
  "Revitalize": Array [
    Object {
      "collectors": 23,
      "mtgoID": undefined,
      "name": "Revitalize",
      "set": "KHM",
    },
    Object {
      "collectors": 23,
      "mtgoID": undefined,
      "name": "Revitalize",
      "set": "KHM",
    },
    Object {
      "collectors": 23,
      "mtgoID": undefined,
      "name": "Revitalize",
      "set": "KHM",
    },
  ],
  "Righteous Valkyrie": Array [
    Object {
      "collectors": 24,
      "mtgoID": undefined,
      "name": "Righteous Valkyrie",
      "set": "KHM",
    },
  ],
  "Story Seeker": Array [
    Object {
      "collectors": 34,
      "mtgoID": undefined,
      "name": "Story Seeker",
      "set": "KHM",
    },
    Object {
      "collectors": 34,
      "mtgoID": undefined,
      "name": "Story Seeker",
      "set": "KHM",
    },
  ],
  "Trelasarra, Moon Dancer": Array [
    Object {
      "collectors": 236,
      "mtgoID": undefined,
      "name": "Trelasarra, Moon Dancer",
      "set": "AFR",
    },
    Object {
      "collectors": 236,
      "mtgoID": undefined,
      "name": "Trelasarra, Moon Dancer",
      "set": "AFR",
    },
  ],
  "Valkyrie Harbinger": Array [
    Object {
      "collectors": 374,
      "mtgoID": undefined,
      "name": "Valkyrie Harbinger",
      "set": "KHM",
    },
  ],
  "You Meet in a Tavern": Array [
    Object {
      "collectors": 215,
      "mtgoID": undefined,
      "name": "You Meet in a Tavern",
      "set": "AFR",
    },
    Object {
      "collectors": 215,
      "mtgoID": undefined,
      "name": "You Meet in a Tavern",
      "set": "AFR",
    },
  ],
}
`;

exports[`distributeCards groupByName 2`] = `
Array [
  Object {
    "collectors": 236,
    "mtgoID": undefined,
    "name": "Trelasarra, Moon Dancer",
    "set": "AFR",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Valkyrie Harbinger",
    "set": "KHM",
  },
  Object {
    "collectors": 186,
    "mtgoID": undefined,
    "name": "Inscription of Abundance",
    "set": "ZNR",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Pillardrop Rescuer",
    "set": "STX",
  },
  Object {
    "collectors": 200,
    "mtgoID": undefined,
    "name": "Prosperous Innkeeper",
    "set": "AFR",
  },
  Object {
    "collectors": 22,
    "mtgoID": undefined,
    "name": "Kor Celebrant",
    "set": "ZNR",
  },
  Object {
    "collectors": 249,
    "mtgoID": undefined,
    "name": "Arctic Treeline",
    "set": "KHM",
  },
  Object {
    "collectors": 126,
    "mtgoID": undefined,
    "name": "Devouring Tendrils",
    "set": "STX",
  },
  Object {
    "collectors": 5,
    "mtgoID": undefined,
    "name": "Celestial Unicorn",
    "set": "AFR",
  },
  Object {
    "collectors": 126,
    "mtgoID": undefined,
    "name": "Devouring Tendrils",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 24,
    "mtgoID": undefined,
    "name": "Righteous Valkyrie",
    "set": "KHM",
  },
  Object {
    "collectors": 5,
    "mtgoID": undefined,
    "name": "Celestial Unicorn",
    "set": "AFR",
  },
  Object {
    "collectors": 20,
    "mtgoID": undefined,
    "name": "Icingdeath, Frost Tyrant",
    "set": "AFR",
  },
  Object {
    "collectors": 220,
    "mtgoID": undefined,
    "name": "Drizzt Do'Urden",
    "set": "AFR",
  },
  Object {
    "collectors": 132,
    "mtgoID": undefined,
    "name": "Fortifying Draught",
    "set": "STX",
  },
  Object {
    "collectors": 119,
    "mtgoID": undefined,
    "name": "Accomplished Alchemist",
    "set": "STX",
  },
  Object {
    "collectors": 34,
    "mtgoID": undefined,
    "name": "Story Seeker",
    "set": "KHM",
  },
  Object {
    "collectors": 6,
    "mtgoID": undefined,
    "name": "Cleric Class",
    "set": "AFR",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Pillardrop Rescuer",
    "set": "STX",
  },
  Object {
    "collectors": 22,
    "mtgoID": undefined,
    "name": "Kor Celebrant",
    "set": "ZNR",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Revitalize",
    "set": "KHM",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 200,
    "mtgoID": undefined,
    "name": "Prosperous Innkeeper",
    "set": "AFR",
  },
  Object {
    "collectors": 22,
    "mtgoID": undefined,
    "name": "Kor Celebrant",
    "set": "ZNR",
  },
  Object {
    "collectors": 194,
    "mtgoID": undefined,
    "name": "Lurking Roper",
    "set": "AFR",
  },
  Object {
    "collectors": 258,
    "mtgoID": undefined,
    "name": "Branchloft Pathway",
    "set": "ZNR",
  },
  Object {
    "collectors": 24,
    "mtgoID": undefined,
    "name": "Minimus Containment",
    "set": "AFR",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Revitalize",
    "set": "KHM",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 194,
    "mtgoID": undefined,
    "name": "Lurking Roper",
    "set": "AFR",
  },
  Object {
    "collectors": 132,
    "mtgoID": undefined,
    "name": "Fortifying Draught",
    "set": "STX",
  },
  Object {
    "collectors": 23,
    "mtgoID": undefined,
    "name": "Revitalize",
    "set": "KHM",
  },
  Object {
    "collectors": 249,
    "mtgoID": undefined,
    "name": "Arctic Treeline",
    "set": "KHM",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 34,
    "mtgoID": undefined,
    "name": "Story Seeker",
    "set": "KHM",
  },
  Object {
    "collectors": 6,
    "mtgoID": undefined,
    "name": "Cleric Class",
    "set": "AFR",
  },
  Object {
    "collectors": 215,
    "mtgoID": undefined,
    "name": "You Meet in a Tavern",
    "set": "AFR",
  },
  Object {
    "collectors": 249,
    "mtgoID": undefined,
    "name": "Arctic Treeline",
    "set": "KHM",
  },
  Object {
    "collectors": 126,
    "mtgoID": undefined,
    "name": "Devouring Tendrils",
    "set": "STX",
  },
  Object {
    "collectors": 236,
    "mtgoID": undefined,
    "name": "Trelasarra, Moon Dancer",
    "set": "AFR",
  },
  Object {
    "collectors": 5,
    "mtgoID": undefined,
    "name": "Celestial Unicorn",
    "set": "AFR",
  },
  Object {
    "collectors": 215,
    "mtgoID": undefined,
    "name": "You Meet in a Tavern",
    "set": "AFR",
  },
  Object {
    "collectors": 24,
    "mtgoID": undefined,
    "name": "Minimus Containment",
    "set": "AFR",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
  Object {
    "collectors": 249,
    "mtgoID": undefined,
    "name": "Arctic Treeline",
    "set": "KHM",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 374,
    "mtgoID": undefined,
    "name": "Forest",
    "set": "STX",
  },
  Object {
    "collectors": 367,
    "mtgoID": undefined,
    "name": "Plains",
    "set": "STX",
  },
]
`;
